# linguist

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  SECURITY.md
.github/: CODEOWNERS
.github/workflows/: ci.yml
cmake/: linguistConfig.cmake.in  options.cmake  packages.cmake  targets.cmake  toolchain-defaults.cmake
docs/: ARCHITECTURE.md
share/cmake/: LinguistEmbedTranslations.cmake
src/: CMakeLists.txt
src/linguist/: CMakeLists.txt  translator-darwin.mm  translator-linux.cxx  translator-win32.cxx  translator.cxx  translator.hxx
src/linguist-embed-tool/: CMakeLists.txt  main.cxx
tests/: CMakeLists.txt  sample.json  test-basic.cxx  test-embedding.cxx
